Fix display of instructions box (no more overflow and show scrollbars when needed)

--- a/src/main/webapp/app/code-editor/layout/code-editor-grid.scss
+++ b/src/main/webapp/app/code-editor/layout/code-editor-grid.scss
@@ -157,6 +157,7 @@ Collapsable styling
     }
     .instructions-wrapper__content {
         height: auto !important;
+        overflow: auto;
 
         .editable-instruction-container__save,
         .editable-instruction-container__editor {
